# depth

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  Taskfile.yaml  pyproject.toml
scripts/: capture_pyzed.py  install_pyzed.py  record_pyzed.py
src/depth/data/: README.md  image_loader.py
src/depth/loss/: README.md  photometric.py  smoothness.py
src/depth/model/: README.md  decoder.py  encoder.py
src/depth/models/: encoder.py
tests/: test_setup.py
tests/data/: test_image_loader.py
tests/loss/: test_photometric.py  test_smoothness.py
tests/model/: test_decoder.py  test_encoder.py
tests/models/: test_encoder.py
